samples/_failures_safe/1761306871_f36de3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b09b348d.c: In function ‘main’:
./samples/SAFE/__tmp_b09b348d.c:152:12: error: missing terminating " character
  152 |     printf("\nTrans
      |            ^~~~~~~~
./samples/SAFE/__tmp_b09b348d.c:152:5: error: expected expression at end of input
  152 |     printf("\nTrans
      |     ^~~~~~
./samples/SAFE/__tmp_b09b348d.c:152:5: error: expected declaration or statement at end of input
